--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,7 @@ output:
   word_document: default
   pdf_document: default
   html_document: default
+  github_document: defaut
 ---
 # MSstats label-free preprocessing
 
